--- a/content/post/2020-03-01-retrospective-reviews-for-process-improvement-a-retrium-case-study.Rmd
+++ b/content/post/2020-03-01-retrospective-reviews-for-process-improvement-a-retrium-case-study.Rmd
@@ -26,12 +26,12 @@ favicon: /img/favicon-32x32.png
 ---
 
 ## Introduction  
-My team applied a new approach with great success to our performance retrospective last week.  The approach worked so well that I’m standing up and evangalising the approach for a wider range of teams than those like our's who apply Agile.  
+Last week, my team applied a new approach with great success to our performance retrospective.  The approach worked so well that I’m standing up and evangalising the approach for a wider range of teams than those like our's who apply Agile.  
 
 ## Retrospective Goals and Objectives  
-The goal of our performance retrospective is to improve our systems and processes to drive business value.
+The goal of our sprint (i.e. our 3-week activity cycle) retrospective is to improve our systems and processes to drive business value.
 
-The objectives or our retrospectives are to identify what from our previous sprint that worked well and what didn’t work well.  From this list of what worked well and didn’t work well, we determine action items for improving our systems and processes.
+The objectives or our retrospectives are to identify what from our previous sprint that worked well and what didn’t work well.  From this list, we determine action items for improving our systems and processes.
 
 ## Using technology to drive retrospective effectiveness  
 While the “what worked well / didn't work well” method has been applied for years, our team used an easy-to-use on-line tool, [Retrium](https://www.retrium.com/){target="_blank"}, to make our retrospective substantially more effective.  Within 30 minutes, our team of 10 successfully:  
@@ -45,16 +45,16 @@ While the “what worked well / didn't work well” method has been applied for 
 The key to achieving such effectiveness in such a short time was Retrium’s online functionality. Both the brainstorming and voting activities occurred online; grouping the items and discussing the action items took place face-to-face in the meeting room.
 
 ## How we used Retrium to run our retrospective  
-Our team applied the "what went well... what didn't" methodology, Retrium offers a range of methodology.  For this blog, I'm applying the "Start / Stop / Continue" methodology applied to a hypothetical demand planning team.  The steps are exactly the same.
+Our team applied the "what went well... what didn't" method - Retrium enables a range of methods for retrospectives. For this blog, I'm demonstrating the "Start / Stop / Continue" method applied to a hypothetical demand planning team.  The steps are exactly the same.
 
 **1. Brainstorm items of what worked well and didn't work well**  
-With the whole team in the meeting room with notebook computers and our Retrium login, our scrum master (facilitator) gave us 5 minutes to list items we believe the team could start doing, stop doing and continue doing in the Retrium system.  On the screen, we could see that other members of the team were adding items though their items were obscured.  
+With the whole team in the meeting room with notebook computers and our Retrium login, our scrum master (facilitator) gave us 5 minutes to list items we believe the team could start doing, stop doing and continue doing in the Retrium system.  On the screen, we could see that other members of the team were adding items though the details of their items were obscured.  
 
 ***
 ![Retrium screen with individual's items for start, stop and continue. Others' contributions are obscured at this stage](/post/2020-03-01-retrospective-reviews-for-process-improvement-a-retrium-case-study_files/Retro brainstorming indiv.png)  
 
 ***
-Once the 5 minutes had elapsed, our scrum master revealed other's contributions.  
+Once the 5 minutes had elapsed, our scrum master revealed others' contributions.  
 
 ***  
 ![Retrium screen with team's items for start, stop and continue. All items displayed for the whole team.](/post/2020-03-01-retrospective-reviews-for-process-improvement-a-retrium-case-study_files/Retro brainstorming team.png)
@@ -63,7 +63,7 @@ Once the 5 minutes had elapsed, our scrum master revealed other's contributions.
 **2. Group items by similiarity**  
 Naturally, items offered by different team members can be grouped based on similarity.  For our team of 10 members, it took only 2 minutes to group the similar items.  Our scrum master grouped the items on the shared screen by simply click-and-dragging and notating each group.    
 
-At this point of the process, the "Continue" items probably need no further action; they are a "nice-to-have" acknowlegement of recent, significant improvements where the team deserves a pat on the back!
+From this point of the process, the "Continue" items probably need no further action; they are a "nice-to-have" acknowlegement of recent, significant improvements where the team deserves a pat on the back!
 
 ***
 ![Start, stop and continue items grouped based on similarity](/post/2020-03-01-retrospective-reviews-for-process-improvement-a-retrium-case-study_files/Retro items grouped.png)
@@ -88,14 +88,14 @@ The final step in our 30-minute retrospective was to discuss and agree on the ac
 
 ## The benefit of Retrospectives and using Retrium 
 
-Retrospectives offer huge opportunities for the team in an obvious and not-so-obvious way:  
+Retrospectives offer huge opportunities for teams in obvious and not-so-obvious ways:  
 
 * They bring issues and opportunities out into the open for discussion;  
-* They allow the team to discuss and agree on the likely business improvement opportunity;  
+* They allow the team to discuss and agree on the size of the potential business improvement;  
 * They help the team to drive process improvement;  
-* Not so obviously, run well, the retrospective brings the team together.  
+* Not so obviously, run well, the retrospective brings the team together, i.e. helping members to feel a part of the team.  
 
-A huge benefit of brainstorming and voting online is that gives everyone an equal voice; there is far less risk of assertive and forthright members of the group dominating the discussion.  Using Retrium allowed our group to cover substantial ground in a very short space of time.  Given the benefit returned from the modest licence cost ($29 USD / month / team as at Mar-20), the return on investment is clear.  An online tool, such as Retrium, brings the kind of value to retrospectives as email did to written correspondence.
+A huge benefit of brainstorming and voting online is that it gives everyone an equal voice; there is far less risk of assertive and forthright members of the group dominating the discussion.  Using Retrium allowed my group to cover substantial ground in a very short space of time.  Given the benefit returned from the modest licence cost ($29 USD / month / team as at Mar-20), the return on investment is clear.  An online tool, such as Retrium, brings the same kind of value to retrospectives as email did to written correspondence.
 
 Retrospectives are an immensely powerful way of bringing a team together.  Not only do retrospectives work well in building the sense of connection between team members and open dialogue, but retrospectives help the team to drive process improvement and business value.
 
