--- a/content/post/2020-03-29-forecasting-during-a-pandemic-ibf-webinar.Rmd
+++ b/content/post/2020-03-29-forecasting-during-a-pandemic-ibf-webinar.Rmd
@@ -31,7 +31,7 @@ favicon: /img/favicon-32x32.png
 
 # Introduction  
 
-COVID-19 presents demand planning with plenty of challenges, though it also might present opportunities.  An example given in the introduction was of Isaac Newton, who was a mere college student at Cambridge University when the campus closed in 1665 due to the Black Plague.  While practicing the 1600’s version of social distancing, the curious and contemplative Newton formed his groundbreaking ideas on calculus, optics and gravity. These ideas were converted into theory when he returned to the reopened university in 1665. By 1667, Newton was promoted to professorship.^[https://www.washingtonpost.com/history/2020/03/12/during-pandemic-isaac-newton-had-work-home-too-he-used-time-wisely/]
+COVID-19 presents demand planning with plenty of challenges, though it also might present opportunities.  An example given in the introduction to this webinar was of Isaac Newton, a mere college student at Cambridge University when the campus closed in 1665 due to the Black Plague.  While practicing the 1600’s version of social distancing, the curious and contemplative Newton formed his groundbreaking ideas on calculus, optics and gravity. These ideas were converted into theory when he returned to the reopened university in 1665. By 1667, Newton was promoted to professorship.^[https://www.washingtonpost.com/history/2020/03/12/during-pandemic-isaac-newton-had-work-home-too-he-used-time-wisely/]
 
 The [Institute of Business Planning and Forecasting](https://ibp.org){target="_blank"} organised a webinar on [“Forecasting During a Pandemic”](https://ibf.org/events/webinar19-03-2020){target="_blank"}.  Most of the webinar, moderated by Eric Wilson from IBP, featured these 3 highly credentialed Demand Managers:
 
@@ -41,16 +41,17 @@ Lenovo
 
 **Patrick Bower**  
 Sr. Director, Global Supply Chain Planning & Customer Service  
-Combe Inc.  
+[Combe Inc.](https://www.combe.com/our-brands){target="_blank"}  
 
 **Andrew D. Schneider, ACPF**  
 Sr. Transformation Manager of Corporate Quality  
-Medtronic
+[Medtronic](https://www.medtronic.com/au-en/index.html){target="_blank"}
 
 Additional insights were offered at the start by **John Hellriegel CPF**, a Sr. Advisor/Facilitator with the Institute of Business Forecasting & Planning.
 
-# The Challenges 
+Given that duration of webinar is **80 minutes**, I made detailed notes and share a summary of the discussion in this blog.  
 
+# The Challenges 
 The scale of the health and economic impacts of this coronavirus are obvious.  However the implications on businesses and supply chains will vary under a number of dimensions and drivers:  
 
 1.  Global macroeconomic activity, including oil price  
@@ -65,7 +66,6 @@ Obviously, the duration and the shape (U-shaped or V-shaped) is uncertain, thoug
 There was a spread of positions on whether to adopt a simple or sophisticated response to the challenge. Unfortunately, this contrast wasn’t discussed overtly.
 
 ## The Simple Response  
-
 Patrick Bower’s approach was to “take a breath and make more judicious changes”.  He doubts how much “demand planning” can occur so early in the crisis:  
 
 * There’s a limited amount of data to work with.
@@ -75,10 +75,9 @@ Patrick Bower’s approach was to “take a breath and make more judicious chang
 
 How can demand planners effectively “clean” data given the uncertainty over the “new normal”?
 
-Demand control processes (S&OE) are even more important in this period: Coombe’s twice-weekly plan reviews are likely to occur even more frequently.
+Demand control processes (S&OE) are even more important in this period: Combe’s twice-weekly plan reviews are likely to occur even more frequently.
 
 ## The Sophisticated Response  
-
 The more sophisticated response advocated a number of suggestions:  
 
 1.  Review S&OP processes to adapt to the current challenge.  
@@ -87,7 +86,6 @@ The more sophisticated response advocated a number of suggestions:
 4.  Double down efforts to extract the true demand from the sales figures.  For example, ATP can distort the true demand picture: ensure that lost and substitute product sales are captured.  
 
 # Data, Information and Insights  
-
 Data was a recurring theme through the webinar, approached from a number of directions.
 
 **Journal Everything**  
@@ -110,7 +108,6 @@ Acquire supply chain data around supply disruptions and channel inventory and fa
 Above all, demand planners should pitch themselves as data brokers for the business, ready to supply business stakeholders with any of the data listed above.  Above all, demand planners should prepare to assert themselves around updated plans as they may have data that other stakeholders simply don’t hold.
 
 # Sales and Operations Planning  
-
 The 3 experts offered the following advice around Sales and Operations Planning.
 
 **Risk Mitigation**  
@@ -140,5 +137,5 @@ Key advice at the end of the webinar included the following:
 
 The final word was a neat suggested mantra for demand planners during this COVID-19 pandemic:
 
->**Keep Calm and Plan On**^[Andrew Schneider]
+><span style="color: blue;">**Keep Calm and Plan On**</span>^[Andrew Schneider]
 
