--- a/content/post/2020-03-29-forecasting-during-a-pandemic-ibf-webinar.Rmd
+++ b/content/post/2020-03-29-forecasting-during-a-pandemic-ibf-webinar.Rmd
@@ -33,7 +33,7 @@ favicon: /img/favicon-32x32.png
 
 COVID-19 presents demand planning with plenty of challenges, though it also might present opportunities.  An example given in the introduction to this webinar was of Isaac Newton, a mere college student at Cambridge University when the campus closed in 1665 due to the Black Plague.  While practicing the 1600’s version of social distancing, the curious and contemplative Newton formed his groundbreaking ideas on calculus, optics and gravity. These ideas were converted into theory when he returned to the reopened university in 1665. By 1667, Newton was promoted to professorship.^[https://www.washingtonpost.com/history/2020/03/12/during-pandemic-isaac-newton-had-work-home-too-he-used-time-wisely/]
 
-The [Institute of Business Planning and Forecasting](https://ibp.org){target="_blank"} organised a webinar on [“Forecasting During a Pandemic”](https://ibf.org/events/webinar19-03-2020){target="_blank"}.  Most of the webinar, moderated by Eric Wilson from IBP, featured these 3 highly credentialed Demand Managers:
+The [Institute of Business Planning and Forecasting](https://ibp.org){target="_blank"} ran a webinar on [“Forecasting During a Pandemic”](https://ibf.org/events/webinar19-03-2020){target="_blank"} on 19 March 2020.  Most of the webinar, moderated by Eric Wilson from IBP, featured these 3 highly credentialed Demand Managers:
 
 **Dustin Deal**  
 Director of North America Business Operations, Motorola  
@@ -50,6 +50,11 @@ Sr. Transformation Manager of Corporate Quality
 Additional insights were offered at the start by **John Hellriegel CPF**, a Sr. Advisor/Facilitator with the Institute of Business Forecasting & Planning.
 
 Given that duration of webinar is **80 minutes**, I made detailed notes and share a summary of the discussion in this blog.  
+
+# Disclaimer  
+Let me state my opinion that the number 1 priority for society at this present time is to maximise the health and wellbeing of all.  In Australia, this means following the advice on the [Australian Government Coronavirus Website](https://www.australia.gov.au/){target="_blank"}. At the time of publishing this blog, it advises that people to stay at home and stay healthy.
+
+That said, supply chain efficiency and effectiveness to keep communities supplied and nourished has never been more important.  This imperitive is why the opinions of experience supply chain and demand planning experts is so helpful, why I listened to this webinar so closely and why I'm sharing the key messages in this blog.
 
 # The Challenges 
 The scale of the health and economic impacts of this coronavirus are obvious.  However the implications on businesses and supply chains will vary under a number of dimensions and drivers:  
